added get current user
